NOISSUE: fixed overflow in filterForm and other bugs

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -34,7 +34,7 @@ $color-white: white;
   width: 500px;
 }
 
-.MuiPaper-root.MuiPaper-elevation1.MuiCard-root.makeStyles-card-190.MuiPaper-rounded {
+.MuiPaper-root.MuiPaper-elevation1.MuiCard-root.jss190.MuiPaper-rounded {
   overflow-x: visible;
   overflow-y: visible;
 }
